# raytracer

./: Cargo.toml  Dockerfile  README.md  linear_interpolatidon_v1.ppm  sphere
raytracer-renderer/: Cargo.toml
raytracer-renderer/src/: hittable.rs  lib.rs  material.rs  ray.rs  vec3.rs  world.rs
raytracer-server/: Cargo.toml
raytracer-server/frontend/: package-lock.json
raytracer-server/src/: broadcast.rs  index.html  main.rs
src/: camera.rs  hittable.rs  lib.rs  main.rs  material.rs  sphere.rs  utils.rs  vec3.rs  world.rs
